# clean-backend-auth

./: .gitignore  README.md  commands.md  docker-compose.yml  todo.md
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1a97b55e83dc_drop_email_generations_table.py  9d33392137d8_updated_migration.py  b95aa2cd443c_initial_migration.py  c0a32599c033_updated_migration_added_token_version_.py  d85b0f869155_new_migration.py
backend/src/: logging.py  main.py
backend/src/auth/: dependencies.py  notes.md  router.py  schemas.py  service.py
backend/src/core/: config.py  entities.py
backend/src/database/: core.py
backend/src/users/: router.py  schemas.py
docs/: scraping-mvp-plan.md
frontend/: README.md  eslint.config.js  index.html  package.json
frontend/src/: App.jsx  styles.css
