[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "celery>=5.6.2",
    "fastapi>=0.128.0",
    "ipython>=9.9.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "scrapeops-scrapy>=0.5.6",
    "scrapeops-scrapy-proxy-sdk>=1.0",
    "scrapy>=2.14.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
    "bcrypt==4.1.2",
]
